--- a/src/panel.scss
+++ b/src/panel.scss
@@ -41,7 +41,7 @@
   box-sizing: border-box;
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(50%, 1fr);
   grid-auto-columns: auto;
   grid-column-gap: 0.5em;
   flex: none;
